css/styles.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Helvetica', sans-serif;
    background-color: #fff;
    color: #000;
}

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    text-align: center;
    padding-top: 24px;
    padding-bottom: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center; /* Vertically center the content */
    z-index: 1000;
}

.navbar h1 {
    width: 100%;
}

footer {
    background-color: #ffffff; /* Choose your preferred background color */
    color: #000000; /* Choose your preferred text color */
    text-align: center;
    padding: 10px 0;
    margin-top: 32vh; /* Push the footer to the bottom */
}

.project-info svg {
    margin-top: 5px;
}

.project-info a {
    text-align: top;
}

.navbar-buttons {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgba(255, 255, 255, 0);
    text-align: center;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center; /* Vertically center the content */
    z-index: 1000;
}

@media (max-width: 675px) {
    .navbar-buttons {
        flex-direction: column; /* Stack buttons vertically on smaller screens */
        align-items: center; /* Center buttons horizontally */
        width: 100%; /* Ensure buttons take full width */
        padding: 0;
    }

    .navbar-left {
        padding-top: 64px;
    }

    .navbar-buttons a {
        margin: 5px 0; /* Add some vertical margin between items */
    }
}

h1 {
    text-align: center;
    width: 100%;
    margin: 0; /* Set margin to zero */
}


.navbar-left {
    display: flex;
    align-items: center;
}

/* Style for the buttons */
.navbar-buttons a {
    display: inline-block;
    padding: 5px 10px;
    color: #000;
    text-decoration: none;
    border-radius: 4px;
    margin-left: 10px;
    transition: all 0.2s;
}

.navbar-buttons a:hover {
    transform: scale(1.2);
    color: #007bff;
}

/* Style for the left button */
.navbar-left a {
    margin-left: auto; /* Push the button to the left */
}

.web-content {
    margin-top: 200px;
}

.projects {
    display: flex;
    justify-content: space-around;
    padding: 20px;
}

.project-card {
    border: 1px solid #ccc;
    border-radius: 16px;
    overflow: hidden;
    width: 300px;
    display: flex;
    align-items: center;
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
}

.card {
    perspective: 1000px;
    margin: 0 !important;
    margin-right: 12px !important;
    padding: 0 !important;
    width: 80px !important;
    height: 80px !important;
}

.section-header {
    width: 100%;
    align-items: center;
    text-align: center;
    opacity: 0.5;
}

img {
    max-width: 80px;
    max-height: 80px;
    margin-right: 10px;
    margin-bottom: 20px;
}

.project-info {
    padding: 10px;
    flex-grow: 1;
    margin-right: -30px !important;
}

h2 {
    margin: 5px 0;
}

p {
    margin: 5px 0;
}

.project-card a {
    display: inline-block;
    padding: 5px 10px;
    margin-top: 10px;
    background-color: #007bff;
    color: #fff;
    text-decoration: none;
    border-radius: 4px;
    transition: all 0.2s;
}

.project-card a:hover {
    background-color: #0067d5;
}

